[gd_scene load_steps=4 format=3 uid="uid://mjg8acdyfui8"]

[ext_resource type="Script" uid="uid://d4gtsgjopmq08" path="res://scripts/button_option.gd" id="1_47gs5"]
[ext_resource type="Texture2D" uid="uid://lqgqctgssfe0" path="res://icons/Truck icon.svg" id="2_47gs5"]
[ext_resource type="AudioStream" uid="uid://cu7xci27vasjf" path="res://Button Click.mp3" id="3_aimtp"]

[node name="VanOption" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47gs5")

[node name="SolarPanelIcon" type="Sprite2D" parent="."]
position = Vector2(131, 64.00001)
scale = Vector2(0.17665565, 0.21124364)
texture = ExtResource("2_47gs5")

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 127.0
offset_right = 350.0
offset_bottom = 151.0
text = "Electric Delivery Van: Â£20 000"

[node name="EcoLabel" type="Label" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 36.0
offset_top = 151.0
offset_right = 350.0
offset_bottom = 174.0
text = "Eco: + 9%"

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 83.0
offset_right = 593.0
offset_bottom = 106.0
text = "Amount: 0"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 30.0
offset_right = 360.0
offset_bottom = 75.0
text = "BUY"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_aimtp")
volume_db = 11.107

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
